# hit-archlens-project

./: .gitignore  00_environment_setup.ipynb  01_aws_asset_download_and_extract.ipynb  02_aws_data_collection.ipynb  03_asset_extraction_and_mapping.ipynb  04_coarse_class_definition.ipynb  05_taxonomy_definition.ipynb  06_icon_mapping_verification.ipynb  07_dataset_build_and_stats.ipynb  08_dataset_rebuild.ipynb  09_class_mapping_and_yaml.ipynb  10_yolo_dataset_preparation.ipynb  11_yolo_training.ipynb  12_yolo_evaluation.ipynb  13_yolo_inference.ipynb  14_auto_labeling_cv.ipynb  15_auto_labeling_llm.ipynb  16_auto_labeling_hybrid.ipynb  17_yolo_diagrams_training.ipynb  18_label_studio_schema_generation.ipynb  19_dataset_validation_and_cleanup.ipynb  README.md  cli.py  coarse20_icons_result.csv  pyproject.toml  stage1_classes.txt  stage2_classes.txt  tree.txt
backend/: __init__.py
backend/configs/: default.yaml  ultra_performance_config.yaml
backend/core/: __init__.py  models.py  performance_test.py
backend/tools/: __init__.py  cli.py  config_validator.py  test_cli.py
data/: aws_icons_mapped_coarse20_fine.csv  aws_icons_unmatched.csv  classes.txt  coarse_class.py  coarse_icon_labels.csv  collection_statistics.json  fine_icon_labels.csv  notes.json  taxonomy_coarse_fine.csv  taxonomy_coarse_fine.json
data/labels/: 00022aa2-imgi_469_images.txt  (+104 more)
scripts/: connect_lmstudio_chat.py  connect_lmstudio_embed.py  connect_local_llm.py  convert_to_notebooks.py  eval_yolo_cls.py  predict_yolo_cls.py  prepare_yolo_dataset.py  reorganize_directories.sh  train_yolo_cls.py
(+226 files in other folders)
